{
  "version": 4,
  "terraform_version": "1.9.0",
  "serial": 7,
  "lineage": "6310426c-9c4c-879f-921f-28637c9b3ee3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485034663303:security-group/sg-07057a17ba9782501",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07057a17ba9782501",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06e6eef202f0ab913"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "appserver",
            "name_prefix": "",
            "owner_id": "485034663303",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "HA_sg-app"
            },
            "tags_all": {
              "Name": "HA_sg-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-047641d81d1517512"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_web",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485034663303:security-group/sg-06e6eef202f0ab913",
            "description": "Security Group for Web Servers",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-07057a17ba9782501"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06e6eef202f0ab913",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webserver",
            "name_prefix": "",
            "owner_id": "485034663303",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "HA_sg-web"
            },
            "tags_all": {
              "Name": "HA_sg-web"
            },
            "timeouts": null,
            "vpc_id": "vpc-047641d81d1517512"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485034663303:subnet/subnet-04d8ed110d3eecbb3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.96.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d8ed110d3eecbb3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "485034663303",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_Subnet_2",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "public_Subnet_2",
              "Terraform": "true"
            },
            "vpc_id": "vpc-047641d81d1517512"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485034663303:vpc/vpc-047641d81d1517512",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-072cf9c8465aa4588",
            "default_route_table_id": "rtb-0d7a582874739af5e",
            "default_security_group_id": "sg-0acc67599c4160eeb",
            "dhcp_options_id": "dopt-016f766dda408e679",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-047641d81d1517512",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d7a582874739af5e",
            "owner_id": "485034663303",
            "tags": {
              "Environment": "demo_environment",
              "Name": "vpc_HA_3-Tire",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "demo_environment",
              "Name": "vpc_HA_3-Tire",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}